--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zegocloud/zego-uikit-prebuilt": "^1.7.5",
+    "@zegocloud/zimkit-react": "^1.2.1",
     "axios": "^1.3.5",
     "node-modules": "^1.0.1",
     "react": "^18.2.0",
