--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zegocloud/zego-uikit-prebuilt": "^1.7.5",
+    "@zegocloud/zego-uikit-prebuilt-live-streaming-rn": "^1.3.1",
+    "@zegocloud/zimkit-react": "^1.2.1",
     "axios": "^1.3.5",
     "framer-motion": "^10.11.2",
     "node-modules": "^1.0.1",
