--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@zegocloud/zego-uikit-prebuilt-live-streaming-rn": "^1.3.1",
     "@zegocloud/zimkit-react": "^1.2.1",
     "axios": "^1.3.5",
+    "chart.js": "^4.2.1",
     "framer-motion": "^10.11.2",
     "node-modules": "^1.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
